--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -1,6 +1,10 @@
 name: Build Binaries
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build_binaries:
@@ -28,7 +32,17 @@ jobs:
           mkdir -p build && cd build
           cmake -DBUILD_PROOF_OF_SPACE_STATICALLY=ON ../
           cmake --build . -- -j 6
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.17
+        id: go
       - name: Build Go binaries
         run: |
-          pwd
-          ls -la
+          cd posp/pospd
+          CGO_LDFLAGS="-L$(pwd)/../../build" go build -o pospd-${{ matrix.os }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: posp-${{ matrix.os }}
+          path: posp/pospd/pospd-${{ matrix.os }}
+          if-no-files-found: error
