try another fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,10 +201,12 @@ elseif (MSVC)
   target_link_libraries(chiapos PRIVATE fse Threads::Threads uint128)
   target_link_libraries(ProofOfSpace fse Threads::Threads uint128)
   target_link_libraries(RunTests PRIVATE uint128)
+  target_link_libraries(BatchProve fse Threads::Threads uint128)
 else()
   target_link_libraries(chiapos PRIVATE fse stdc++fs Threads::Threads)
   target_link_libraries(ProofOfSpace fse stdc++fs Threads::Threads)
   target_link_libraries(RunTests PRIVATE stdc++fs)
+  target_link_libraries(BatchProve fse stdc++fs Threads::Threads)
 endif()
 
 enable_testing()
