--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -7,6 +7,26 @@ on:
     branches: [main]
 
 jobs:
+  deploy:
+    name: Deploy
+    needs: build_binaries
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          path: artifacts
+      - name: Display structure of downloaded files
+        run: |
+          mv artifacts/posp-ubuntu-20.04/BatchProve ./posp_bin_linux-amd64
+          rm -fr artifacts/posp-ubuntu-20.04
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          fail_on_unmatched_files: true
+          files: |
+            posp_bin_linux-amd64
   build_binaries:
     name: Build wheel on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
