--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -20,6 +20,7 @@ jobs:
         run: |
           mv artifacts/posp-ubuntu-20.04/BatchProve ./posp_bin_linux-amd64
           rm -fr artifacts/posp-ubuntu-20.04
+          ls -la artifacts
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
